# cppbackend

sprint1/problems/map_json/solution/: CMakeLists.txt  http_server.cpp  main.cpp  request_handler.h
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/command_line/solution/solution/src/: api_handler.h  authorization.h  http_server.cpp  http_server.h  json_loader.cpp  main.cpp  model.cpp  player.h  request_handler.cpp  request_handler.h  tagged.h  ticker.h
sprint2/problems/command_line/solution/src/: json_loader.h  model.h
sprint2/problems/game_state/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/game_state/solution/src/: api_handler.h  http_server.cpp  json_loader.cpp  main.cpp  model.h  player.h  request_handler.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: json_loader.cpp  main.cpp  model.h  player.cpp  player.h  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/move_players/solution/data/: config.json
sprint2/problems/move_players/solution/src/: api_handler.h  http_server.h  json_loader.cpp  main.cpp  model.cpp  model.h  player.h  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  log.h  main.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/src/: http_server.cpp  main.cpp  request_handler.h
sprint2/problems/static_content/solution/static/src/: request_handler.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: api_handler.h  authorization.h  http_server.cpp  json_loader.cpp  main.cpp  model.cpp  model.h  player.h
sprint3/problems/ammo/solution/: ammo.txt  load.yaml
sprint3/problems/find_return/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/find_return/solution/src/: collision_detector.cpp  extra_data.h  geom.h  http_server.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp
sprint3/problems/flamegraph/precode/: shoot.py
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather-tests/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather/solution/src/: collision_detector.cpp  collision_detector.h
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/data/: config.json
sprint3/problems/gen_objects/solution/src/: game_server.cpp  game_server.h  geom.h  json_loader.cpp  json_loader.h  loot_generator.h  main.cpp  model.cpp  model.h  tagged.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp  htmldecode.h
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: config.cpp  dotgen.cpp  graph.cpp  graph.h  readfile.cpp  report
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: collision_detector.cpp  extra_data.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/data/: config.json
sprint3/problems/static_lib/solution/src/: model.cpp  model.h  request_handler.h
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint3/problems/tv/solution/tests/: boost_controller_tests.cpp  boost_tv_tests.cpp  catch_controller_tests.cpp  catch_tv_tests.cpp  google_controller_tests.cpp  google_tv_tests.cpp
sprint3/problems/urldecode/solution/src/: urldecode.cpp  urldecode.h
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/src/: urlencode.cpp  urlencode.h
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: application.h  main.cpp  model.h  model_serialization.h
